# cmd-n-ctrl

./: .env.example  .gitignore  Makefile  README.md  compose.local-db.yaml  pyproject.toml
src/app/config/: __init__.py  logging.py
src/app/config/ioc/: configure.py
src/app/config/ioc/plugins/: __init__.py
src/app/config/ioc/providers/: services.py  settings.py  tools.py
src/app/modules/common/app/command/: __init__.py  command.py  protocol.py  workload.py
src/app/modules/common/app/msg_bus/: __init__.py  app_channel.py  registration.py
src/app/modules/common/app/service/: query_session.py
src/app/modules/common/app/uow/: uow.py
src/app/modules/common/domain/: agg_root.py  repository.py
src/app/modules/common/domain/events/: domain.py
src/app/modules/common/domain/exception/: base.py
src/app/modules/common/domain/mixins/: __init__.py  created_updated.py
src/app/modules/common/impl/msg_bus/: in_memory.py
src/app/shared/: singleton.py
src/cnc/config/: __init__.py
src/cnc/config/ioc/: configure.py
src/cnc/config/ioc/plugins/: __init__.py
src/cnc/config/ioc/providers/: services.py  settings.py  tools.py
src/cnc/modules/common/app/command/: command.py  protocol.py  (+1 more)
src/cnc/modules/common/domain/: agg_root.py  repository.py
src/cnc/shared/ioc/: root.py
src/cnc/shared/settings/: app.py  local.py  log.py
src/db/: alembic.ini
src/db/src/: env.py
src/db/src/config/ioc/: __init__.py  mounts.py  registry.py
src/db/src/custom/: ioc.py  settings.py
src/entrypoints/: tui.py  web.py
src/entrypoints/tools/: __init__.py  path.py
(+56 files in other folders)
